--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.4",
     "@vercel/postgres": "^0.10.0",
     "next": "15.0.2",
     "node-fetch": "^3.3.2",
