--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/third-parties": "^15.0.4",
+    "@next/third-parties": "^15.1.0",
     "@vercel/postgres": "^0.10.0",
-    "next": "15.0.2",
+    "next": "^15.1.0",
     "node-fetch": "^3.3.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
